# sample-lambda-python

./: .gitignore  ENVIRONMENT_VARIABLES_SETUP.md  GEMINI.md  GITHUB_ACTIONS_NAMING.md  LAMBDA_STATE_MANAGEMENT.md  LAMBDA_VERSION_NAMING.md  PRE_ENVIRONMENT_ANALYSIS.md  README.md  S3_STRUCTURE_PROBLEMS.md  USAGE_EXAMPLES.md  VERSION_CONFLICT_ANALYSIS.md  VERSION_MANAGEMENT_GUIDE.md  __version__.py  debug-pre-version-check.sh  dev-requirements.txt  lambda-deploy-config-with-pyproject.yml  lambda-deploy-config-with-testing.yml  lambda-deploy-config.yml  lambda_function.py  pyproject.toml  requirements.txt  setup.py  test-pre-environment-version-check.sh  test-s3-structure-problems.sh  test-version-conflicts.sh  test_lambda.py
.github/config/: lambda-deploy-config.yml
.github/workflows/: lambda-deploy-advanced.yml  lambda-deploy-env.yml  lambda-deploy-reusable.yml  lambda-deploy-with-vars.yml  lambda-deploy.yml  test-vars.yml
tests/: __init__.py  test_lambda.py  test_lambda_function.py
